--- a/style/style-reg.css
+++ b/style/style-reg.css
@@ -115,3 +115,53 @@ form.contakt-form {
     display: grid;
     justify-content: center;
 }
+/* Анімаційний чекбокс */
+.checkbox-container input[type="checkbox"] {
+    appearance: none; /* Відключення стандартного вигляду */
+    width: 40px;
+    height: 20px;
+    border-radius: 20px;
+    background: #ddd;
+    position: relative;
+    cursor: pointer;
+    outline: 0;
+    transition: background 0.35s;
+}
+
+.checkbox-container input[type="checkbox"]:before {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: #46A358; /* Колір фону при активації */
+    border-radius: 20px;
+    transform: scale(0);
+    transition: transform 0.35s;
+    z-index: 0;
+}
+
+.checkbox-container input[type="checkbox"]:after {
+    content: "";
+    position: absolute;
+    width: 18px;
+    height: 18px;
+    background: #fff;
+    border-radius: 50%;
+    top: 50%;
+    left: 1px;
+    transform: translateY(-50%);
+    transition: left 0.35s;
+    z-index: 1;
+}
+
+.checkbox-container input[type="checkbox"]:checked {
+    background: #46A358;
+}
+
+.checkbox-container input[type="checkbox"]:checked:before {
+    transform: scale(1);
+}
+
+.checkbox-container input[type="checkbox"]:checked:after {
+    left: calc(100% - 19px);
+}
